--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<!-- head only used by the browser -->
     <head>
-        <title>Welcome</title>
+        <title>My Culture</title>
         <link rel="stylesheet" href="stylesheet.css">
     </head>
 
