--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
    <h2>Malo E Lelei</h2>
 
    <p>Welcome to the site of Tonga!</p>
-
-   <p><p>In this site, you will see images, information, etc about Tonga, it's where I come from.</p>
    	
    </section>
    
@@ -28,13 +26,13 @@
 
    <h2>Greetings</h2>
 
-   <p>This is a site all about my favourite people, sport teams and television shows.</p>
+   <p>This site is all about my culture and where I come from.</p>
 
-   <p>You will find some really nice pictures and videos of Richard Parker, the Burgess Brothers, the Rabbitohs, Nz Breakers, the Warriors, Zach LaVine, Peyton Siva, Daniel Vidot, The Originals and much more.</p
+   <p>You will find some nice images of what my culture does, their flags and more.</p
 </section>
 
 
-
+<section>
 
    <h3>Gallery</h3>
 
@@ -43,6 +41,9 @@
    <img src="https://s-media-cache-ak0.pinimg.com/736x/41/de/ff/41deff85384bfc9c8fcb7ddec9ce7bb4.jpg">
    <img src="http://upload.wikimedia.org/wikipedia/commons/4/40/France_vs_Tonga_2011_RWC_(5).jpg">
    <img src="http://niuwebdesign.com/pacific/uploads/catablog/originals/Elizabeth_Mark_Tonga_2012_1_small.jpg">
+   <img src="http://www.virtualoceania.net/tonga/photos/culture/tapa/to0002.jpg"
+   <img src="http://static.panoramio.com/photos/large/11745277.jpg"
+   <img src="http://cache4.asset-cache.net/gc/457739709-rugged-coastline-near-hufangalupe-gettyimages.jpg?v=1&c=IWSAsset&k=2&d=v1XglVSLa4e%2BhzdC4m%2BK25GGok%2Bo3Ey2FH%2BolCcYYPNUQNCB%2BQ8IB0jq0WnFp1CR"
 
 </section>
  
