--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </section>
 
 
-<section>
+<section class="gallery">
 
    <h3>Gallery</h3>
 
@@ -62,7 +62,7 @@
    <a href="http://static.panoramio.com/photos/large/11745277.jpg" data-lightbox="gallery">
     <img src="http://static.panoramio.com/photos/large/11745277.jpg">
 </a>   
-    
+    </section>
 <script>
 $.backstretch([
       "http://i.ytimg.com/vi/ND07m8wBltQ/maxresdefault.jpg",
@@ -76,7 +76,7 @@ $.backstretch([
 
 
 
-</section>
+
  
     </body>
     
