--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
        	 <h1>HOBBIES!</h1>
         <h2>#IslandLife!</h2>
            <a href="index.html">Home</a>
-           <a href="#">Blog</a>
+           <a href="#">Video's</a>
            
        </header>
        <section class="introduction">
