--- a/Follow.html
+++ b/Follow.html
@@ -3,7 +3,7 @@
 
 	<!-- head only used by the browser -->
     <head>
-        <title>My Life!</title>
+        <title>My Culture</title>
         <link rel="stylesheet" href="stylesheet.css">
         <script src="jquery.js" type="text/javascript"></script>
         <link href="css/lightbox.css" rel="stylesheet">
@@ -24,15 +24,15 @@
        <section class="introduction">
 
    <h2>Food, music and sports</h2>
-   <p></p>
+   <p>This site is about Food, music and sports</p>
    	
    </section>
    
    <section class="introduction">
 
-   <h2>Welcome to the page of my favourites</h2>
+   <h2>Hello!</h2>
 
-   <p>On this webpage, you will see some images of food, music and sports, it's three of my favourite hobbies, also some music video's for entertainnment or maybe just to listen to.</p>
+   <p>On this webpage, you will see some images of food, music and sports, it's three of my favourite hobbies, also some music video's for entertainnment.</p>
 
   
 </section>
